<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="System_Modus_Enum" Id="{16856399-64dc-4123-bc8e-5836de863140}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE System_Modus_Enum :
(
	System_Init := 0,
	System_Run
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>